# distilled-llm

./: .gitignore  README.md  deploy.md  deploy.py  main.py  play.ipynb  progress.md  pyproject.toml  setup.py  step-train.sh  test.py  test_append.py  text.txt  text_vertex.py
.agents/rules/: AGENTS.md
Cdatasets/: dataset.py  tokenizer.py  train_tokenizer.py
output/evals/teacher_vs_student_20260310_133251/: comparison.json  predictions.jsonl  report.md
output/mini-math-student-local-10k/: config.json  results.json
output/mini-math-t-6000/: config.json  results.json
output/mini-math-teacher-v1-30K/: README.md  config.json  metrics.md
output/mini-math-teacher-v1-30K/metrics/: final_ckpt_30000.json  metrics.md  metrics_prompt_metrics_step_30000.json  modelcard.md  results.json
output/mini-math-v1/: config.json
presets/: README.md  deploy_l4x2_balanced.args  deploy_l4x2_baseline.args  deploy_l4x2_longctx.args  deploy_l4x2_student.args  deploy_l4x2_teacher.args
scripts/: infer.py  loadDataset.py  model.py  run_step_train.py  step-train.sh  train_distill.py  train_pretrain.py  train_vertex.py
tokenizer_artifacts/: tokenizer.json  tokenizer_config.json
utils/: __init__.py  binary_dataset.py  common.py  config.py  config_io.py  constants.py  engine.py  eval_metrics.py  packed_dataset_builder.py  trainer.py  transformer.py  vertexExperiments.py
